Stye the Home page

--- a/app.html
+++ b/app.html
@@ -45,7 +45,6 @@
               src="./img/border_radius.svg"
               alt="Rounded border_radius Icon"
             />
-            <hr />
           </div>
         </div>
         <div id="home__content">
@@ -55,7 +54,7 @@
           <div id="home__content__cont">
             <h1>
               I'm
-              <span id="home__content__name">Alireza</span>
+              <span class="name__col">Alireza</span>
               Kavousy nezjad
             </h1>
             <p>
@@ -71,22 +70,100 @@
       </section>
 
       <section id="org__logo">
-        <div id="org__dept">
-          <div class="org__dept__logo">
-            <img src="./img/ps_logo.svg" alt="PS Department Logo" />
-            <h3>Photoshop</h3>
+        <div class="org__dept__logo">
+          <img src="./img/ps_logo.svg" alt="PS Department Logo" />
+          <div class="org__dept__p">
+            <p>Photoshop</p>
           </div>
-          <div class="org__dept__logo">
-            <img src="./img/ae_logo.svg" alt="AE Department Logo" />
-            <h3>After Effects</h3>
+        </div>
+        <div class="org__dept__logo">
+          <img src="./img/ae_logo.svg" alt="AE Department Logo" />
+          <div class="org__dept__p">
+            <p>After Effects</p>
           </div>
-          <div class="org__dept__logo">
-            <img src="./img/ai_logo.svg" alt="AI Department Logo" />
-            <h3>Illustrator</h3>
+        </div>
+        <div class="org__dept__logo">
+          <img src="./img/ai_logo.svg" alt="AI Department Logo" />
+          <div class="org__dept__p">
+            <p>Illustrator</p>
           </div>
-          <div class="org__dept__logo">
-            <img src="./img/figma_logo.svg" alt="Figma Department Logo" />
-            <h3>Figma</h3>
+        </div>
+        <div class="org__dept__logo">
+          <img src="./img/figma_logo.svg" alt="Figma Department Logo" />
+          <div class="org__dept__p">
+            <p>Figma</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <div id="projects__container">
+          <div id="projects__container__cont">
+            <h3>Projects</h3>
+            <div class="circle"></div>
+            <p>Story</p>
+            <p>Post</p>
+            <p>Banner</p>
+            <p>Trailer</p>
+            <p>Design</p>
+            <p>More</p>
+          </div>
+
+          <div id="project__container__img">
+            <div class="courses">
+              <img src="./img/flower.svg" alt="Lightning flower" />
+              <h5>Story for sale English courses</h5>
+              <button>Edit for you</button>
+              <button>see preview</button>
+            </div>
+            <div class="courses">
+              <img src="./img/black_guy.svg" alt="Black Guy dread lock" />
+              <h5>Story for sale English courses</h5>
+              <button>Edit for you</button>
+              <button>see preview</button>
+            </div>
+            <div class="courses">
+              <img src="./img/pretty lady.svg" alt="Lightning flower" />
+              <h5>Story for sale English courses</h5>
+              <button>Edit for you</button>
+              <button>see preview</button>
+            </div>
+            <div class="courses">
+              <img src="./img/man on top of rock.svg" alt="Lightning flower" />
+              <h5>Story for sale English courses</h5>
+              <button>Edit for you</button>
+              <button>see preview</button>
+            </div>
+            <div class="courses">
+              <img src="./img/pretty lady.svg" alt="Lightning flower" />
+              <h5>Story for sale English courses</h5>
+              <button>Edit for you</button>
+              <button>see preview</button>
+            </div>
+            <div class="courses">
+              <img src="./img/man on top of rock.svg" alt="Lightning flower" />
+              <h5>Story for sale English courses</h5>
+              <button>Edit for you</button>
+              <button>see preview</button>
+            </div>
+          </div>
+
+          <div id="projects__map">
+            <div id="projects__map__cont">
+              <h1>
+                I'm
+                <span class="name__col">Alireza</span>
+                Kavousy nezjad
+              </h1>
+              <ul>
+                <li>I was born in Iran-Mashhad</li>
+                <li>I'm 20 years old</li>
+                <li>I have started my interest in this field from 2019</li>
+                <li>I'm designer video editor web developer and ...</li>
+                <li>My phone number in Iran +989212073348</li>
+              </ul>
+            </div>
+            <img src="./img/mashhad_map.svg" alt="" />
           </div>
         </div>
       </section>
